@@ -4550,14 +4550,14 @@
 			<width>30</width>
 			<height>30</height>
 			<texture>osd/fullscreen/cd.png</texture>
-			<animation effect="fade" start="100" end="30" time="250" condition="!Control.HasFocus(525) | !Container(525).HasFocus(11)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(11)">Conditional</animation>
 			<visible>System.HasMediaDVD</visible>
 		</control>
 		<control type="image">
 			<width>30</width>
 			<height>30</height>
 			<texture>windows/home/favourites.png</texture>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(10)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(10)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.favourites)</visible>
 		</control>
 		<control type="image">
@@ -4570,7 +4570,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(4) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(4) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.pvr) + System.GetBool(pvrmanager.enabled) + [!Skin.HasSetting(HomeClicksSubmenu) | StringCompare(Skin.String(homescreen.style),panel)] + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4582,7 +4582,7 @@
 		<control type="label">
 			<label>41220</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(4)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(4)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.pvr) + System.GetBool(pvrmanager.enabled)</visible>
 		</control>
 		<control type="image">
@@ -4595,7 +4595,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(1) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(1) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.movies) + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4607,7 +4607,7 @@
 		<control type="label">
 			<label>$INFO[Skin.String(Home.Movies.Tile.0.Label)]</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(1)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(1)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.movies)</visible>
 		</control>
 		<control type="image">
@@ -4620,7 +4620,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(2) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(2) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.tvshows) + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4633,7 +4633,7 @@
 		<control type="label">
 			<label>$INFO[Skin.String(Home.TvShows.Tile.0.Label)]</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(2)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(2)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.tvshows)</visible>
 		</control>
 		<control type="image">
@@ -4646,7 +4646,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(3) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(3) | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.music) + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4658,7 +4658,7 @@
 		<control type="label">
 			<label>$INFO[Skin.String(Home.Music.Tile.0.Label)]</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(3)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(3)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.music)</visible>
 		</control>
 		<control type="image">
@@ -4671,7 +4671,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(5) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(5) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.pictures) + [!Skin.HasSetting(HomeClicksSubmenu) | StringCompare(Skin.String(homescreen.style),panel)] + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4683,7 +4683,7 @@
 		<control type="label">
 			<label>$INFO[Skin.String(Home.Pictures.Tile.0.Label)]</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(5)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(5)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.pictures)</visible>
 		</control>
 		<control type="image">
@@ -4696,7 +4696,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(7) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(7) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.programs) + [!Skin.HasSetting(HomeClicksSubmenu) | StringCompare(Skin.String(homescreen.style),panel)] + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4708,7 +4708,7 @@
 		<control type="label">
 			<label>$INFO[Skin.String(Home.Programs.Tile.0.Label)]</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(7)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(7)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.programs)</visible>
 		</control>
 		<control type="image">
@@ -4721,7 +4721,7 @@
 			<texture>windows/home/submenu-arrow.png</texture>
 			<include>visiblehidefadeinfo</include>
 			<colordiffuse>white</colordiffuse>
-			<animation effect="fade" start="100" end="0" time="250" condition="!Container(525).HasFocus(8) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
+			<animation effect="fade" start="100" end="0" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | !Container(525).HasFocus(8) | Control.HasFocus(83)  | Control.HasFocus(84) | Control.HasFocus(85)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.weather) + !Skin.HasSetting(HomeClicksSubmenu) + StringCompare(Skin.String(homescreen.style),simple) + !Skin.HasSetting(HideSubmenuArrows)</visible>
 		</control>
 		<control type="image">
@@ -4732,7 +4732,7 @@
 		<control type="label">
 			<label>8</label>
 			<include>Mod_HomeLabel</include>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(8)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(85) | Control.HasFocus(84) | !Container(525).HasFocus(8)">Conditional</animation>
 			<visible>!Skin.HasSetting(disable.weather)</visible>
 		</control>
 		<control type="image">
@@ -4742,7 +4742,7 @@
 			<width>30</width>
 			<height>30</height>
 			<texture>windows/home/settings.png</texture>
-			<animation effect="fade" start="100" end="30" time="250" condition="Control.HasFocus(84) | !Container(525).HasFocus(9)">Conditional</animation>
+			<animation effect="fade" start="100" end="30" time="250" condition="[!Control.HasFocus(525) + !Control.HasFocus(83)] | Control.HasFocus(84) | !Container(525).HasFocus(9)">Conditional</animation>
 		</control>
 	</include>
 	<include name="Mod_525Content">
